# dtFFT

./: .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  Makefile.inc  README.md  codecov.yml  index.html  pyproject.toml  ruff.toml  search.html  setup.py
benchmark/: README.md
cmake/: CheckFFTWFeatures.cmake  CheckFortranFeatures.cmake  CheckMPIFeatures.cmake  CheckNCCLFeatures.cmake  FindFFTW.cmake  FindNCCL.cmake  dtfftConfig.cmake.in
doc/: dtfft_ford.md
docs/: Doxyfile  api_c.rst  api_cxx.rst  api_fortran.rst  api_python.rst  benchmarks.rst  build.rst  c_api.rst  conf.py  cpp_api.rst  dtfft_ford.md  environ.rst  f_api.rst  index.rst  requirements.txt  usage.rst
include/: dtfft.f03  dtfft.h  dtfft.hpp  dtfft_config.h.in
interface/: aligned_alloc.html  apply_interface.html  comm_f2c.html  compress_private_interface.html  create_c2c_plan.html  create_interface.html  create_interface~2.html  create_interface~3.html  create_interface~4.html  create_private_interface.html  create_r2c_plan.html  create_r2r_plan.html  createinterface.html  cudadevicesynchronize.html  cudaeventcreate.html  cudaeventcreatewithflags.html  cudaeventdestroy.html  cudaeventelapsedtime.html  cudaeventrecord.html  cudaeventsynchronize.html  cudafree.html  cudagetdevice.html  cudagetdevicecount.html  cudageterrorstring_c.html  cudagetlasterror.html  cudamalloc.html  cudamemcpy.html  cudamemcpyasync.html  cudamemgetinfo.html  cudamemset.html  cudasetdevice.html  cudastreamcreate.html  cudastreamdestroy.html  cudastreamquery.html  cudastreamsynchronize.html  cudastreamwaitevent.html  cufftdestroy.html  cufftdestroy_interface.html  cufftmpattachreshapecomm.html  cufftmpattachreshapecomm_interface.html  (+190 more)
lists/: absint.html  files.html  modules.html  procedures.html  programs.html  types.html
module/: dtfft.html  dtfft_abstract_backend.html  dtfft_abstract_compressor.html  dtfft_abstract_executor.html  dtfft_abstract_kernel.html  dtfft_abstract_reshape_handle.html  dtfft_abstract_transpose_handle.html  dtfft_api.html  (+49 more)
src/: CMakeLists.txt  Makefile  dtfft.F90  dtfft.i90  dtfft_abstract_backend.F90  dtfft_abstract_backend_selfcopy.F90  dtfft_abstract_compressor.F90  dtfft_abstract_executor.F90  dtfft_abstract_executor_m.F90  dtfft_abstract_gpu_backend.F90  dtfft_abstract_gpu_backend_selfcopy.F90  dtfft_abstract_kernel.F90  dtfft_abstract_reshape_handle.F90  dtfft_abstract_transpose_handle.F90  dtfft_abstract_transpose_plan.F90  dtfft_api.F90  dtfft_backend_cufftmp.F90  dtfft_backend_mpi.F90  dtfft_backend_mpi_a2a.F90  dtfft_backend_mpi_p2p.F90  dtfft_backend_mpi_p2p_pipelined.F90  dtfft_backend_nccl.F90  dtfft_backend_nccl_pipelined.F90  dtfft_c_interface.F90  dtfft_c_interface_c.c  dtfft_compressor_zfp.F90  dtfft_config.F90  dtfft_core.i90  dtfft_core_m.F90  dtfft_core_sm.F90  dtfft_errors.F90  dtfft_executor_cufft_m.F90  dtfft_executor_fftw_m.F90  dtfft_executor_mkl_m.F90  dtfft_executor_vkfft_m.F90  dtfft_helpers.c  dtfft_info_m.F90  dtfft_interface_cuda.F90  dtfft_interface_cuda_runtime.F90  dtfft_interface_cufft.F90  (+47 more)
src/include/: _dtfft_cuda.h  _dtfft_kernel_host_block_routines.inc  _dtfft_kernel_host_routines.inc  _dtfft_mem_alloc_free.inc  _dtfft_mpi.h  _dtfft_private.h  _dtfft_profile.h  dtfft_cuda.h  dtfft_mpi.h  dtfft_private.h  dtfft_profile.h
src/interfaces/: CMakeLists.txt
src/interfaces/api/: CMakeLists.txt  dtfft_api.F90  dtfft_api.h  dtfft_api_c.c  dtfft_api_cxx.cpp  dtfft_api_cxx.cxx  dtfft_api_py.cpp
src/interfaces/api/c/: dtfft_api_c.c
src/interfaces/api/include/: dtfft_api.h  dtfft_private.h
src/interfaces/api/java/: CMakeLists.txt
src/interfaces/cuda/: CMakeLists.txt  dtfft_interface_cuda.F90  dtfft_interface_cuda_runtime.F90  dtfft_interface_cufft.F90  dtfft_interface_nccl.F90  dtfft_interface_nvrtc.F90  dtfft_interface_nvshmem.F90  dtfft_interface_nvtx.F90  dtfft_interface_nvtx3.c
src/interfaces/fft/: CMakeLists.txt
src/interfaces/fft/cufft/: CMakeLists.txt  dtfft_executor_cufft_m.F90  dtfft_interface_cufft_m.F90  dtfft_interface_cufft_native_m.F90
src/interfaces/fft/fftw/: CMakeLists.txt  args_create.i90  args_execute.i90  complex_signature.i90  dtfft_executor_fftw_m.F90  dtfft_interface_fftw_m.F90  dtfft_interface_fftw_native_m.F90
src/interfaces/fft/kfr/: CMakeLists.txt  args_execute.i90  dtfft_executor_kfr_m.F90  dtfft_interface_kfr.c  dtfft_interface_kfr_m.F90
src/interfaces/fft/mkl/: CMakeLists.txt  dtfft_executor_mkl_m.F90  dtfft_interface_mkl.c  dtfft_interface_mkl_m.F90  dtfft_interface_mkl_native_m.F90
src/interfaces/fft/vkfft/: CMakeLists.txt  dtfft_executor_vkfft_m.F90  dtfft_interface_vkfft_m.F90  dtfft_interface_vkfft_native.c
src/interfaces/python/: README.md  README_sdist.md  __init__.py  __init__.pyi  _dtfft.pyi  _dtfft_test_utils.pyi
src/tests/: CMakeLists.txt  test_compression.F90  test_device_kernels.F90  test_host_kernels.F90
tests/: CMakeLists.txt  Makefile  cuda_utils.cu  test_utils.F90
tests/c/: Makefile  test_c2c_2d_c.c  test_c2c_2d_cxx.cpp  test_c2c_2d_float_c.c  test_c2c_3d_c.c  test_c2c_3d_float_c.c  test_c2c_3d_float_cxx.cpp  test_r2c_2d_c.c  test_r2c_2d_cxx.cpp  test_r2c_2d_float_c.c  test_r2c_3d_c.c  test_r2c_3d_float_c.c  test_r2c_3d_float_cxx.cpp  test_r2r_2d_c.c  test_r2r_2d_cxx.cpp  test_r2r_2d_float_c.c  test_r2r_3d_c.c  test_r2r_3d_float_c.c  test_r2r_3d_float_cxx.cpp  test_utils.h
tests/fortran/: Makefile  test_c2c_2d_f.F90  test_c2c_2d_float_f.F90  test_c2c_3d_f.F90  test_c2c_3d_float_f.F90  test_pencils_f.F90  test_r2c_2d_f.F90  test_r2c_2d_float_f.F90  test_r2c_3d_f.F90  test_r2c_3d_float_f.F90  test_r2r_2d_f.F90  test_r2r_2d_float_f.F90  test_r2r_3d_f.F90  test_r2r_3d_float_f.F90  test_utils.F90  test_utils.f90
tests/include/: check_and_report.inc  h2d.inc  scale.inc
tests/install/: CMakeLists.txt  main.F90  main.c  main.cxx
tests/python/: CMakeLists.txt  test_c2c_3d_py.py  test_compression_config_py.py  test_pencil_api_py.py  test_plan_properties_py.py  test_r2c_2d_py.py  test_r2r_3d_float_py.py  test_r2r_kinds_py.py  test_request_async_py.py  test_utils_py.cpp
(+1323 files in other folders)
